<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".SignUpActivity">

    <!--SCREEN TITLE-->
    <TextView
        android:id="@+id/titleSignUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#F2F2F2"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--USERNAME-->
    <EditText
        android:id="@+id/userNameSignUpEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:hint="@string/please_enter_username"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSignUpTextView" />

    <!--PASSWORD-->
    <EditText
        android:id="@+id/passwordSignUpEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameSignUpEditText" />

    <!--SIGN UP BUTTON-->
    <Button
        android:id="@+id/buttonSignUpPage"
        android:layout_width="235dp"
        android:layout_height="72dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#8f7383"
        android:padding="20dp"
        android:text="@string/create_account"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpEditText" />

    <!--CANCEL BUTTON-->
    <Button
        android:id="@+id/buttonSignUpCancel"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#8a8889"
        android:padding="20dp"
        android:text="@string/cancel"
        android:textColor="#e8e6e8"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUpPage" />


</androidx.constraintlayout.widget.ConstraintLayout>